# bike-sharing-mlops

./: .cruft.json  .pre-commit-config.yaml  README.md  bike-sharing-mlops.code-workspace  pyproject.toml  python_env.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/workflows/: check.yml  sync-labels.yml
notebooks/: prototype.ipynb
