[project]
name = "bike-sharing-mlops"
version = "0.1.0"
description = "Test repo to learn and apply mlops best practices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlflow>=2.20.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
