[project]
name = "bike-sharing-mlops"
version = "0.1.0"
description = "Test repo to learn and apply mlops best practices"
authors = [{name = "Federico Raimondi Cominesi"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.20.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "scikit-learn>=1.6.1",
]
license = { file = "LICENSE.txt" }
keywords = ["mlops", "python", "package"]

[project.urls]
Homepage = "https://github.com/FedericoRaimondi/bike-sharing-mlops"
Documentation = ""
Repository = "https://github.com/FedericoRaimondi/bike-sharing-mlops"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
